[project]
name = "puck-bridge-py"
version = "0.2.1"
description = "Python library for connecting to and interacting with Puck servers"
authors = [{ name = "sn0w12", email = "lucasskold49@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
keywords = ["puck", "hockey", "game", "bridge", "server", "mod"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/sn0w12/puck-bridge-py"
Repository = "https://github.com/sn0w12/puck-bridge-py"
Issues = "https://github.com/sn0w12/puck-bridge-py/issues"

[project.scripts]
puck-bridge = "puck_bridge_py.server:start_server"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"
